<resources>
    <string name="app_name">Medidor Nivel de Agua</string>
    <string name="action_settings">Configuraciones</string>
    <string name="button_search">Buscar</string>
    <string name="button_connect">Conectar</string>
    <string name="text_off">Apagado</string>
    <string name="text_on">Encendido</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_status_connected">Conectado</string>
    <string name="text_status_disconnected">Desconectado</string>
</resources>
