<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView android:text="@string/text_bluetooth" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#ff3eb5ff"
        android:textSize="30dp" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_weight="0.28"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        android:textSize="28dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:id="@+id/listView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:id="@+id/button"
        android:textSize="28dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:id="@+id/button2"
        android:textSize="28dp" />

</LinearLayout>